# nova-playlist

./: README.md  nova_playlist.py  pyproject.toml
src/nova_playlist/: cli.py  nova.py  parser.py
tests/: test_nova.py  test_parser.py
tests/testdata/: actual-full-page.html
