[tool.poetry]
name = "nova-playlist"
version = "0.1.0"
description = "Display information about the songs that recently played on Radio Nova"
authors = ["Rafik Draoui <rafik@rafik.ca>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rafikdraoui/nova-playlist"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.8"
pytz = "*"

[tool.poetry.scripts]
nova = "nova_playlist:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
