[tool.poetry]
name = "nova-playlist"
version = "0.3.0"
description = "Display information about the songs that recently played on Radio Nova"
authors = ["Rafik Draoui <rafik@rafik.ca>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rafikdraoui/nova-playlist"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.8"

[tool.poetry.scripts]
nova = "nova_playlist:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
