[tool.poetry]
name = "nova-playlist"
version = "0.4.0"
description = "Display information about the songs that recently played on Radio Nova"
authors = ["Rafik Draoui <rafik@rafik.ca>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rafikdraoui/nova-playlist"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7"
pytest-httpserver = "^1"

[tool.poetry.scripts]
nova = "nova_playlist.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
